add index and some images and navbar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="w-100" style="height: 75vh;background-image: url(<%= asset_path 'banner-bench.png' %>);">
+  <p class="white-text"></p>
+</div>
+
+
