fixed hover effect on cards and set storage service to cloudinary

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -78,6 +78,7 @@
     transition: max-height 1.5s ease, opacity 1s ease;
   }
   &:hover &__details-wrapper {
+      max-height: 20rem;
       opacity: 1;
     }
     &:hover &__text-wrapper {
@@ -88,7 +89,8 @@
     }
     &:hover &__image {
       transform: scale(1.2);
-      z-index: -1;}
+      z-index: -1;
+    }
   &__excerpt {
     font-weight: 300;
   }
