add custom markers and only have map - left commented code just in case

--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -1,19 +1,19 @@
-<div class="content-wrapper">
-  <% @benches.each do |bench| %>
+<!-- <div class="content-wrapper">
+  <#% @benches.each do |bench| %>
       <div class="news-card">
         <a href="#" class="news-card__card-link"></a>
-        <%= cl_image_tag bench.photo.key, class: "news-card__image" %>
+        <#%= cl_image_tag bench.photo.key, class: "news-card__image" %>
         <div class="news-card__text-wrapper p-3">
-          <p class="news-card__title"><%= bench.dedication %></p>
+          <p class="news-card__title"><#%= bench.dedication %></p>
           <div class="news-card__post-date">Jan 29, 2018</div>
           <div class="news-card__details-wrapper">
-            <p class="news-card__excerpt"><%= bench.inscription %></p>
+            <p class="news-card__excerpt"><#%= bench.inscription %></p>
             <a href="#" class="news-card__read-more">Read more <i class="fas fa-long-arrow-alt-right"></i></a>
           </div>
         </div>
       </div>
-  <% end %>
-</div>
+  <#% end %>
+</div> -->
 
 <div style="width: 100%; height: 600px;"
   data-controller="mapbox"
