--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="w-100" style="height: 75vh;background-image: url(<%= asset_path 'banner-bench.png' %>);">
-  <p class="white-text"></p>
+<div class="bench-banner w-100" style="height: 75vh;background-image: url(<%= asset_path 'banner-bench.png' %>);">
+  <!-- <p class="white-text"></p> -->
 </div>
 
 
