--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -59,6 +59,7 @@
   &__text-wrapper {
     position: absolute;
     bottom: 0rem;
+    width: 100%;
     padding: 1rem;
     color: white;
     transition: background-color 1.5s ease;
