--- a/app/views/benches/_info_window.html.erb
+++ b/app/views/benches/_info_window.html.erb
@@ -1,5 +1,5 @@
 <div class="news-card">
-  <a href="#" class="news-card__card-link"></a>
+  <%= link_to '', bench_path(bench), class: 'news-card__card-link' %>
   <%= cl_image_tag bench.photo.key, class: "news-card__image" %>
   <div class="news-card__text-wrapper p-3">
     <p class="news-card__title"><%= bench.dedication %></p>
