--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -15,7 +15,7 @@
   <#% end %>
 </div> -->
 
-<div style="width: 100%; height: 600px;"
+<div style="width: 100%; height: calc(100vh - 166.83px);"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
