--- a/app/views/merchandises/index.html.erb
+++ b/app/views/merchandises/index.html.erb
@@ -4,7 +4,7 @@
       <%= link_to '', merchandise_path(merch), class: 'news-card__card-link' %>
       <%= cl_image_tag merch.photo.key, width: 400, height: 300, crop: :fill, class: "news-card__image" %>
       <div class="news-card__text-wrapper p-3">
-        <p class="news-card__title"><%= merch.item %></p>
+        <p class="news-card__title"><%= merch.item.capitalize %></p>
         <div class="news-card__post-date">£<%= merch.price.round %></div>
         <div class="news-card__details-wrapper">
           <p class="news-card__excerpt"></p>
