--- a/app/views/merchandises/show.html.erb
+++ b/app/views/merchandises/show.html.erb
@@ -1,3 +1,3 @@
-<%= cl_image_tag @merchandise.photo.key, width: 400, height: 300, crop: :fill, class: "news-card__image" %>
+<%= cl_image_tag @merchandise.photo.key, width: 400, height: 300, crop: :fill %>
 <p class="news-card__title"><%= @merchandise.item.capitalize %></p>
 <div class="news-card__post-date"><p>Amount: <%= humanized_money_with_symbol(@merchandise.price) %></p></div>
