styled devise pages

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,7 +7,12 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-grey: #F4F4F4;
+
+// Benches colors
+$midnight-blue: #191970;
+$midnight: #161D24;
+$grey-text: #B4B4B4;
 
 .white-text {
   color: white;
