--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <p class="devise-small-text mb-1">Already have an account? <%= link_to "Click here", new_session_path(resource_name) %> to sign in</p>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <p class="devise-small-text mb-1">Don't have an account? <%= link_to "Click here", new_registration_path(resource_name), class: 'text-decoration-underline' %> to sign up</p>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <p class="devise-small-text mb-1">Forgot your password? <%= link_to "Click here", new_password_path(resource_name), class: 'text-decoration-underline' %> to recover it!
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
