--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,8 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Noto+Sans:wght@400;700&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Abril Fatface', cursive;
+$body-font: 'Noto Sans', sans-serif;
 $headers-font: 'Abril Fatface', cursive;
 
 // To use a font file (.woff) uncomment following lines
