--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,36 @@
-<h2>Change your password</h2>
+<div class="devise-wrapper devise-min-height" style="background-image: url(<%= asset_path 'devise-benches.svg' %>)">
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-12 col-sm-10 col-md-6 col-lg-5">
+        <h2 class="devise-title mb-5">Change your password</h2>
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+          <%= f.input :reset_password_token, as: :hidden %>
+          <%= f.full_error :reset_password_token %>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
-
-  <div class="form-inputs">
-    <%= f.input :password,
-                label: "New password",
-                required: true,
-                autofocus: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                label: "Confirm your new password",
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+          <div class="form-inputs">
+            <%= f.input :password,
+                        required: true,
+                        autofocus: true,
+                        label: false,
+                        placeholder: 'new password',
+                        hint: ("minimum #{@minimum_password_length} characters" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password", class: "form-input" } %>
+            <%= f.input :password_confirmation,
+                        required: true,
+                        label: false,
+                        placeholder: 'confirm new password',
+                        input_html: { autocomplete: "new-password", class: "form-input" } %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Change my password" %>
+          </div>
+        <% end %>
+        <div class="my-3">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
