--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,40 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
+<div class="devise-wrapper devise-min-height" style="background-image: url(<%= asset_path 'devise-benches.svg' %>)">
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-12 col-sm-10 col-md-6 col-lg-5">
+        <h2 class="devise-title mb-5">sign up</h2>
 
-      <h2>Sign up</h2>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :email,
+                        required: true,
+                        label: false,
+                        placeholder: 'email',
+                        autofocus: true,
+                        input_html: { autocomplete: "email", class: "form-input" }%>
+            <%= f.input :password,
+                        required: true,
+                        label: false,
+                        placeholder: "password",
+                        hint: ("minimum #{@minimum_password_length} characters" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password", class: "form-input" } %>
+            <%= f.input :password_confirmation,
+                        required: true,
+                        label: false,
+                        placeholder: "confirm password",
+                        input_html: { autocomplete: "new-password", class: "form-input" } %>
+          </div>
 
-        <div class="form-inputs">
-          <%= f.input :email,
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "email" }%>
-          <%= f.input :password,
-                      required: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
-                      required: true,
-                      input_html: { autocomplete: "new-password" } %>
+          <div class="form-actions mt-5">
+            <%= f.button :submit, "Sign up", class: 'btn benches-primary-btn' %>
+          </div>
+        <% end %>
+        <div class="my-3">
+          <%= render "devise/shared/links" %>
         </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
-        </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
