--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,6 +77,7 @@
     max-height: 0;
     opacity: 0;
     transition: max-height 1.5s ease, opacity 1s ease;
+    text-decoration: none;
   }
   &:hover &__details-wrapper {
       max-height: 20rem;
@@ -86,7 +87,7 @@
       background-color: rgba(0, 0, 0, 0.6);
     }
     &:hover &__title {
-      color: yellow;
+      color: #7BD389;
     }
     &:hover &__image {
       transform: scale(1.2);
@@ -121,7 +122,7 @@
     }
     &:hover i {
       left: 0.5rem;
-      color: yellow;
+      color: #7BD389;
     }
   }
 }
