--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row py-4">
-    <div class="col-md-3"><%= image_tag @order.merchandise.photo_url, width: '100%' %></div>
+    <div class="col-md-3"><%= cl_image_tag @order.merchandise.photo.key, width: '100%' %></div>
     <div class="col">
       <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.merchandise.name %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
+      <p>Purchase of <strong><%= @order.merchandise.item %></strong> for <strong><%= humanized_money_with_symbol @order.amount %></strong></p>
       <button id="pay" class="btn btn-primary">Pay</button>
 
       <script src="https://js.stripe.com/v3/"></script>
