add new route for benches + edit registrations + add devises stuff to application controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="bench-banner w-100" style="height: 75vh;background-image: url(<%= asset_path 'banner-bench.png' %>);">
-  <!-- <p class="white-text"></p> -->
+  <%= link_to 'Explore benches', benches_path, class: "btn btn-primary" %>
 </div>
 
 
