--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -15,6 +15,8 @@
   <#% end %>
 </div> -->
 
+<%#= link_to "add a bench", new_bench_path(@bench) %>
+
 <div style="width: 100%; height: calc(100vh - 166.83px);"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
