--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -97,32 +97,23 @@
     font-weight: 300;
   }
   &__read-more {
-    background: black;
-    color: #bbb;
+    // background: black;
+    // color: #bbb;
     display: block;
-    padding: 0.4rem 0.6rem;
+    // padding: 0.4rem 0.6rem;
     border-radius: 0.3rem;
-    margin-top: 1rem;
-    border: 1px solid #444;
+    // margin-top: 1rem;
+    // border: 1px solid #444;
     font-size: 0.8rem;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     text-decoration: none;
     width: 7rem;
-    margin-left: auto;
+    // margin-left: auto;
     position: relative;
     z-index: 5;
     i {
-      position: relative;
-      left: 0.2rem;
-      color: #888;
-      transition: left 0.5s ease, color 0.6s ease;
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-    }
-    &:hover i {
-      left: 0.5rem;
-      color: #7BD389;
+      padding: 10px 5px;
     }
   }
 }
