--- a/app/views/benches/_info_window.html.erb
+++ b/app/views/benches/_info_window.html.erb
@@ -6,9 +6,12 @@
     <div class="news-card__post-date">Jan 29, 2018</div>
     <div class="news-card__details-wrapper">
       <p class="news-card__excerpt"><%= bench.inscription %></p>
-      <%= link_to bench_path(bench), class: "d-flex news-card__read-more" do %>
-        <p class="m-0">Read more</p>
-        <i class="fas fa-long-arrow-alt-right"></i>
+      <%= link_to bench_path(bench), class: " news-card__read-more" do %>
+        <div class="icon-container">
+          <div class="icon icon-collapse">
+            <i class="fas fa-angle-double-right"></i>
+          </div>
+        </div>
       <% end %>
     </div>
   </div>
