--- a/app/views/benches/index.html.erb
+++ b/app/views/benches/index.html.erb
@@ -1,23 +1,4 @@
-<!-- <div class="content-wrapper">
-  <#% @benches.each do |bench| %>
-      <div class="news-card">
-        <a href="#" class="news-card__card-link"></a>
-        <#%= cl_image_tag bench.photo.key, class: "news-card__image" %>
-        <div class="news-card__text-wrapper p-3">
-          <p class="news-card__title"><#%= bench.dedication %></p>
-          <div class="news-card__post-date">Jan 29, 2018</div>
-          <div class="news-card__details-wrapper">
-            <p class="news-card__excerpt"><#%= bench.inscription %></p>
-            <a href="#" class="news-card__read-more">Read more <i class="fas fa-long-arrow-alt-right"></i></a>
-          </div>
-        </div>
-      </div>
-  <#% end %>
-</div> -->
-
-<%#= link_to "add a bench", new_bench_path(@bench) %>
-
-<div style="width: 100%; height: calc(100vh - 166.83px);"
+<div style="width: 100%; height: 92vh;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
