--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
     <div class="min-height">
       <%= yield %>
     </div>
-    <%= render 'shared/footer' %>
+    <% unless params[:controller] == "pages" || params[:action] == "index" %>
+      <%= render 'shared/footer' %>
+    <%  end %>
   </body>
 </html>
