--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Benches", benches_path, class: "nav-link" %>
+          <%= link_to 'Upload a bench', benches_path, class: "btn btn-sm btn-dark mr-3" %>
         </li>
         <li class="nav-item">
           <%#= link_to "Messages", "#", class: "nav-link" %>
