--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,12 +5,11 @@ body {
 
 .bench-banner {
   background-size: cover;
-  position: relative;
-  top: 100;
+  background-position: 60% 0;
 }
 
 .position-buttons {
   position: absolute;
-  top: 424px;
-  left: 620px;
+  top: 224px;
+  left: 100px;
 }
