--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-  <div class="bench-banner w-100" style="height: 92vh;background-image: url(<%= asset_path 'benches.jpeg' %>);">
+  <div class="vh-100 bench-banner" style="background-image: url(<%= asset_path 'bench_bench.jpeg' %>);">
     <div class="position-buttons">
-      <%= link_to 'Explore benches', benches_path, class: "btn btn-mid btn-dark mr-3" %>
+      <%= link_to 'Explore benches', benches_path, class: "btn btn-mid btn-dark" %>
     </div>
   </div>
