--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Noto+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Noto Sans', sans-serif;
-$headers-font: 'Abril Fatface', cursive;
+$body-font: 'Playfair Display', serif;
+$headers-font: 'Playfair Display', serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
