--- a/app/views/benches/_info_window.html.erb
+++ b/app/views/benches/_info_window.html.erb
@@ -1,6 +1,10 @@
 <div class="news-card">
   <%= link_to '', bench_path(bench), class: 'news-card__card-link' %>
-  <%= cl_image_tag bench.photo.key, class: "news-card__image" %>
+  <% if bench.photo.key %>
+    <%= cl_image_tag bench.photo.key, class: "news-card__image" %>
+  <% else %>
+    <% image_tag "bench_bench.jpeg"  %>
+  <% end %>
   <div class="news-card__text-wrapper p-3">
     <p class="news-card__title"><%= bench.dedication %></p>
     <div class="news-card__post-date">Jan 29, 2018</div>
