--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,16 +3,14 @@
     <%= image_tag 'benches-logo.png' %>
   <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+  <div class="navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to 'Upload a bench', benches_path, class: "btn btn-sm btn-dark mr-3" %>
+          <%= link_to 'Upload a bench', benches_path, class: "btn btn-sm btn-dark mr-3 d-none d-sm-inline" %>
         </li>
         <li class="nav-item">
           <%#= link_to "Messages", "#", class: "nav-link" %>
